Fix seconds spacing

--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ body {
 .textHour > * {
     padding: 2.5px;
     margin: 2.5px;
-    width: 10rem;
+    width: 11rem;
     text-align: right;
     margin-left: -15px;
 }
